--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 	and may god have mercy on your soul if you want to <a href="https://en.wikipedia.org/wiki/Chinese_water_torture">bake a lightmap onto a translucent texture</a>.<br>	
 	</p>
 	<img src="https://i.imgur.com/IShKtbs.png" height="400" alt="A silly cat">
+	<p>
+	Cool web pages:
+	</p>
+	<a href="./assignment5/fancifymytext.html">Assignment 5</a>
   </body>
 
 </html>
