--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<p>
 	Cool web pages:
 	</p>
-	<a href="./assignment5/fancifymytext.html">Assignment 5</a>
+	<a href="./assignment5/fancifymytext.html">Assignment 5</a><br>
+	<a href="./assignment6/encrypt-it.html">Assignment 6</a>
   </body>
 
 </html>
